# fmmkv

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/fyt/mmkv/: MmkvPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/fyt/mmkv_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: mmkv.podspec
ios/Classes/: CMakeLists.txt  MmkvPlugin.m  SwiftMmkvPlugin.swift  fmmkv.cpp
lib/: mmkv.dart  mmkv_content_change_notification.dart  mmkv_handler.dart  mmkv_log_level.dart  mmkv_recover_strategic.dart  mmkv_util.dart
test/: mmkv_test.dart
